src-tauri/cargo_check_errors_5_utf8.txt
cargo :     Checking d2r-rust v0.1.0 (F:\mycode\D2Rmutiplay\d2r-rus
t\src-tauri)
所在位置 行:1 字符: 1
+ cargo check 2> cargo_check_errors_5.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking d2...rus 
   t\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0432]: unresolved import `windows_capture::settings::CursorM
ode`
  --> src\modules\ai.rs:15:22
   |
15 |         ColorFormat, CursorMode, DrawBorderSettings, Settings,
   |                      ^^^^^^^^^^ no `CursorMode` in `settings`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `d2r-rust` (lib) due to 1 previous error
